<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/background"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Recipe Image -->
        <ImageView
            android:id="@+id/ivRecipeImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_place_holder"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_preview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundedbg"
            android:orientation="vertical">
            <!-- Title -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/recipe_title"
                android:gravity="center" />

            <!-- Preparation Time and Serving -->
            <TextView
                android:id="@+id/tvPrepTimeAndServing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="@string/timeserving" />

            <!-- Ingredients Label -->
            <TextView
                android:id="@+id/tvIngredientsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/ingredients" />

            <!-- Ingredients List -->
            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:text="@string/ingredientlist" />

            <!-- Steps Label -->
            <TextView
                android:id="@+id/tvStepsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/steps" />

            <!-- Steps List -->
            <TextView
                android:id="@+id/tvSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:text="@string/stepslist" />

            <!-- Category Label -->
            <TextView
                android:id="@+id/tvCategoryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/category" />

            <!-- Category List -->
            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:text="@string/categories" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
